# smip

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/smip_al/: Cargo.toml
crates/smip_al/src/: lib.rs
crates/smip_al/src/implementations/: mod.rs  vsomeip.rs
crates/smip_core/: Cargo.toml
crates/smip_core/src/: client.rs  error.rs  runtime.rs  types.rs
crates/smip_proc_macros/: Cargo.toml
crates/smip_proc_macros/src/: service.rs
crates/smip_proc_macros/tests/: method-no-args.rs
crates/smip_proc_macros/tests/ui-fail/: method-extra-args.stderr  method-generic.rs  method-generic.stderr  method-no-id.rs  methods-multiple-impls.rs  methods-multiple-impls.stderr  methods-trait-impl.rs  methods-trait-impl.stderr  service-no-id.stderr
crates/someip_types/: Cargo.toml
crates/vsomeip-rs/: Cargo.toml  README.md
crates/vsomeip-rs/examples/: simple_client_server.rs
crates/vsomeip-rs/scripts/: config_file.json  run_example_server
crates/vsomeip-rs/src/: application.rs  constants.rs  error.rs  lib.rs  message.rs  payload.rs  primitives.rs  runtime.rs  util.rs
crates/vsomeip-rs/vsomeip-sys/: Cargo.toml  build.rs
crates/vsomeip-rs/vsomeip-sys/src/: callback.rs  lib.rs  shim.hpp
crates/vsomeip_compat/: Cargo.toml
crates/vsomeip_compat/src/: lib.rs
examples/: dashboard.rs  dashboard_client.rs  simple.rs  simple_client.rs
scripts/: dashboard_example.sh
smip_core/: Cargo.toml
smip_core/src/: client.rs  error.rs  lib.rs  runtime.rs  types.rs
smip_proc_macros/: Cargo.toml
smip_proc_macros/src/: lib.rs  methods.rs  service.rs
smip_proc_macros/tests/: method-no-return.rs
smip_proc_macros/tests/ui-fail/: method-extra-args.rs  method-no-id.stderr  service-no-id.rs
someip_types/: Cargo.toml
someip_types/src/: lib.rs
src/: lib.rs
vsomeip_compat/: Cargo.toml
vsomeip_compat/src/: lib.rs
vsomeip_config/: dashboard.json
