[package]
name = "smip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

members = ["smip_core", "smip_proc_macros", "someip_types", "vsomeip_compat"]


[dependencies]
smip_core = {path = "smip_core" }
# smip_al = { path = "smip_al" }
smip_proc_macros = {path = "smip_proc_macros"}
someip_types = {path = "someip_types"}
vsomeip_compat = {path = "vsomeip_compat"}

[dev-dependencies]
rand = "0.8"
chrono = "0.4"
noise = "0.9"

[features]
serde = ["smip_core/serde"]