[package]
name = "smip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

members = ["crates/smip_core", "crates/smip_proc_macros", "crates/someip_types", "crates/vsomeip_compat"]


[dependencies]
smip_core = {path = "crates/smip_core" }
# smip_al = { path = "smip_al" }
smip_proc_macros = {path = "crates/smip_proc_macros"}
someip_types = {path = "crates/someip_types"}
vsomeip_compat = {path = "crates/vsomeip_compat"}

[dev-dependencies]
rand = "0.8"
chrono = "0.4"
noise = "0.9"

[features]
serde = ["smip_core/serde"]