[package]
name = "smip_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
someip_types = {path = "../someip_types"}
vsomeip-rs = {git = "ssh://git@github.com/tw-sdv/vsomeip-rs"}
vsomeip_compat = {path = "../vsomeip_compat"}
serde = "1"
bincode = "1"
anyhow = "1"
netdev = "0.25"
thiserror = "1"