[package]
name = "smip_proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
darling = "0.20"
proc-macro2 = "1"

smip_core = {path = "../smip_core"}
someip_types = {path = "../someip_types"}