[package]
name = "someip_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"], optional = true}
vsomeip-rs = {path = "../vsomeip-rs"}

[features]
default = []
serde = ["dep:serde"]