[package]
name = "vsomeip-sys"
version = "0.1.0"
edition = "2021"
authors = ["Atri Sarkar <atri.sarkar@thoughtworks.com>", "Gnana Ganesh <gnana.ganesh@thoughtworks.com>"]
description = "FFI bindings for the vsomeip library"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { version = "1.0", features = ["default", "c++17"] }
autocxx = "0.26"

[build-dependencies]
cxx-build = "1.0"
autocxx-build = "0.26"
miette = { version = "5", features = ["fancy"] }